--- a/Client /index.html
+++ b/Client /index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/images/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Social Sensor</title>
+    <title>EchoSphere</title>
   </head>
   <body>
     <div id="root"></div>
